реализовал cпецификации ингредиентов
